--- a/ESModule/index.html
+++ b/ESModule/index.html
@@ -5,8 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-<script defer src="bundle.js"></script></head>
+</head>
+<script type="module">
+  // import {n, changeN} from './a.js'
+  // console.log(n, 'aaa')
+  // changeN()
+  // console.log(n, 'aaa1')
+  import './a.js'
+</script>
 <body>
-  <div>kk2kk33332</div>
+  
 </body>
 </html>
